--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,7 @@
 services:
   sheetgen:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: sheet_generator
+    build: .
+    ports:
+      - "5000:5000"
     volumes:
       - ./outputs:/app/outputs
-    working_dir: /app
-    command: python main.py
