--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
+blinker==1.9.0
 certifi==2025.6.15
 chardet==5.2.0
 charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
 contourpy==1.3.2
 cycler==0.12.1
+Flask==3.1.1
 fonttools==4.58.4
 idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
 joblib==1.5.1
 jsonpickle==4.1.1
 kiwisolver==1.4.8
+MarkupSafe==3.0.2
 matplotlib==3.10.3
 more-itertools==10.7.0
 music21==9.7.0
@@ -20,3 +27,4 @@ requests==2.32.4
 six==1.17.0
 urllib3==2.4.0
 webcolors==24.11.1
+Werkzeug==3.1.3
